2011-10-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR target/50106
	Backport from mainline.
	2011-10-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	 * config/arm/arm.c (thumb_unexpanded_epilogue): Handle return
        reg size from 1-3.

2011-10-19  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (loc_descriptor): For SUBREG pass SUBREG_REG's mode as
	second argument instead of mode.

	PR target/50350
	Backport from mainline
	2011-09-27  Richard Sandiford  <rdsandiford@googlemail.com>

	PR middle-end/50386
	PR middle-end/50326
	* tree-sra.c (build_ref_for_model): Use the type of the field as
	the type of the COMPONENT_REF.

2011-10-18  Uros Bizjak  <ubizjak@gmail.com>
	    Eric Botcazou  <ebotcazou@adacore.com>

	PR target/50737
	* config/alpha/linux-unwind.h (alpha_fallback_frame_state): Set
	fs->signal_frame to 1.

2011-10-14  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-10-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50723
	* ipa-split.c (split_function): Use GSI_CONTINUE_LINKING.

	2011-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50712
	* ipa-split.c (split_function): Always re-gimplify parameters
	when they are not gimple vals before passing them.  Properly
	check for type compatibility.

2011-10-13  Eric Botcazou  <ebotcazou@adacore.com>

	* doc/invoke.texi (SPARC options): Document -mfix-at697f.
	* config/sparc/sparc.opt (mfix-at697f): New option.
	* config/sparc/sparc.c (TARGET_MACHINE_DEPENDENT_REORG): Define.
	(sparc_reorg): New function.

2011-10-12  Steve Ellcey  <sje@cup.hp.com>

	PR target/49967
	Backport from Mainline 179472.
	* configure.ac (gcc_cv_ld_static_dynamic): Define for *-*-hpux*.
	(gcc_cv_ld_static_option): Ditto.
	(gcc_cv_ld_dynamic_option): Ditto.
	* configure: Regenerate.

2011-10-12  Paul Koning  <pkoning@gcc.gnu.org>

	PR tree-optimization/50189
	* tree-vrp.c (extract_range_from_assert): Use the type of